syntax="proto3";

option java_multiple_files=true;
option java_package="com.example.app.library";
import "google/protobuf/empty.proto";

message Book{
  int32 id=1;
  string  title=2;
  string author=3;
  int32 price=4;

}

message BookId{
  int32 id=1;
}

message BookAllResponse{
  repeated Book book=1;
}


service BookService{
  rpc getBook(BookId) returns (Book);
  rpc getAllBook(google.protobuf.Empty) returns (BookAllResponse);

}